-XX:MaxPermSize option no longer needed in Java 8