@@ -1,7 +1,7 @@
 #!/bin/bash
 
 set -e
-export MAVEN_OPTS="-Xms512m -Xmx1024m -Xss16m -XX:MaxPermSize=512m"
+export MAVEN_OPTS="-Xms512m -Xmx1024m -Xss16m"
 
 cd pgql-spoofax/; mvn clean install; cd ../
 
